--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-style": "node build-output.js"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
@@ -16,6 +17,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "@tokens-studio/sd-transforms": "^0.14.0",
     "sd-tailwindcss-transformer": "^1.4.1",
     "style-dictionary": "^3.9.2"
   }
